# FMC-agent

./: .gitignore  COPILOT_CONTEXT.py  FMC_TEMPLATE_STRUCTURE.md  LICENSE  README.md  pyproject.toml  sample_template.xlsx
.github/workflows/: ci.yml
legacy/: CreateFailModes.txt  DataCheck.py  ExportCCs.py  QuestUpload.py  RemoveCCs.py
src/fmc_agent/: __init__.py  change_log.py  cli.py  config.py  excel_validator.py  exceptions.py  logging_setup.py  mock_data.py  operations.py  registry.py  schemas.py
src/fmc_agent/utils/: io.py
tests/: __init__.py  test_change_log.py  test_cli_basic.py  test_config.py  test_operations.py  test_plan_command.py  test_registry.py  test_validator.py
tests/fixtures/: sample.xlsx.txt
